Fix navigation spacing

--- a/assets/styles/core-navigation.css
+++ b/assets/styles/core-navigation.css
@@ -1,11 +1,6 @@
 /* Navigation
 --------------------------------------------- */
 
-.wp-block-page-list,
-.wp-block-navigation__container {
-	gap: 5px 25px;
-}
-
 .editor-styles-wrapper .wp-block-navigation__container > .wp-element-button {
 	padding: 0;
 }
